src/test/deca/syntax/invalid/extension/MatSansNom.deca
// missing IDENT at '='
// Description:
//    Matrice sans nom
//

{
    int[][][][][][] = new int[2][3][4][5][6][7];
}
